--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Build the foundations of your open inovation funds</title>
-    <link rel="stylesheet" href="./css/styles.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+      <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
     <div class="container">
@@ -516,6 +514,6 @@
         }
         
         showSection(0);
-    </script>
+      <script src="./app.js" defer></script>
 </body>
 </html>
