Update text for clarity in method-cards.html

--- a/method-cards.html
+++ b/method-cards.html
@@ -37,7 +37,7 @@
                 <div class="canvas-step">
                     <span class="step-icon">1</span>
                     <h3>Pick a stage</h3>
-                    <p>from the 8 fund building phases below</p>
+                    <p>from the 8 fund building phases that follow</p>
                 </div>
                 <div class="flow-arrow">→</div>
                 <div class="canvas-step">
